--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -97,7 +97,7 @@ header.S_Header {
   width: 100%;
   grid-column: span 3;
   position: sticky;
-  top: 80px;
+  top: 124px;
   align-self: start;
   /* height: calc(100vh - 10rem); */
   height: calc(100vh - 6.5rem);
@@ -105,6 +105,10 @@ header.S_Header {
 
   &::-webkit-scrollbar-track {
     background-color: red;
+  }
+
+  @media screen and (max-width: 1024px) {
+    grid-column: span 2;
   }
 }
 
@@ -140,9 +144,8 @@ header.S_Header {
   height: 100vh;
 }
 .S_ArticleHead {
-  margin-top: var(--header-offset);
   background-color: white;
-  padding: var(--space-40) 0;
+  padding: var(--space-24) 0;
   display: flex;
   flex-direction: column;
 }
