--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -36,14 +36,20 @@
 header.S_Header {
   width: 100%;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   color: var(--gray-darksoft);
   border-bottom: 1px solid var(--gray-lightest);
   background-color: var(--white-500);
   position: fixed;
   top: 0;
-  height: 4rem;
+  min-height: 4rem;
   z-index: 100;
+  padding-top: var(--space-12);
+  overflow: hidden;
+
+  &.is-open {
+    height: 100dvh;
+  }
 }
 
 /* Poster Page */
