--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -36,12 +36,9 @@
   .O_CardArticle {
     grid-column: span 4;
 
-    /* @media screen and (max-width: 1024px) {
-      grid-column: span 6;
+    @media screen and (max-width: 1024px) {
+      grid-column: span 3;
     }
-    @media screen and (max-width: 768px) {
-      grid-column: span 12;
-    } */
   }
   &.main {
     .O_CardArticle {
@@ -52,7 +49,7 @@
 .C_CollapsibleLists {
   display: flex;
   flex-direction: column;
-  gap: var(--space-4);
+  gap: var(--space-2);
 }
 
 .C_AticleLinks {
@@ -107,4 +104,9 @@
 .С_MobileHeaderLinks {
   display: flex;
   flex-direction: column;
+}
+.C_Tags {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-4);
 }
