--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -15,13 +15,18 @@
   grid-template-columns: repeat(var(--grid-columns), 1fr);
   align-items: end;
   gap: var(--grid-gap);
+  border-bottom: 1px solid var(--gray-lightest);
+  padding-bottom: var(--space-16);
 
   p {
-    grid-column: 1/3;
+    grid-column: span 3;
   }
 
   h2 {
     grid-column: 7/13;
+  }
+  h4 {
+    grid-column: span 9;
   }
 }
 .M_HeadingPicture {
@@ -36,6 +41,7 @@
 }
 .M_Markers {
   display: flex;
+  flex-direction: row;
   gap: var(--space-12);
 }
 .M_SectionData {
@@ -85,15 +91,6 @@
 
   h1 {
     grid-column: span 5;
-  }
-
-  .A_CaptionText {
-    grid-column: 10/13;
-
-    @media screen and (max-width: 1024px) {
-      grid-column: 6/10;
-      margin-top: auto;
-    }
   }
 }
 .M_FiltersTitle {
@@ -336,4 +333,9 @@
   .A_Button {
     width: 200px;
   }
+}
+.M_ChapterHeading {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
 }
