--- a/src/stylesheets/responsive.css
+++ b/src/stylesheets/responsive.css
@@ -122,3 +122,8 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media screen and(max-width: 1024px) {
+  .A_CaptionText {
+    background: red;
+  }
+}
