--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -451,8 +451,14 @@
 }
 
 .O_DividerBanner {
-  height: 460px;
   border-radius: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
   background: linear-gradient(
     82deg,
     #fe3904 8.11%,
@@ -460,4 +466,10 @@
     #fe96e4 88.91%,
     rgba(254, 150, 228, 0.5) 100%
   );
+
+  img.polygon {
+    position: absolute;
+    top: -50vw;
+    left: 34vw;
+  }
 }
