--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -177,6 +177,7 @@ input.A_SearchInput {
 
 .A_CollapseName {
   font-weight: 500;
+  font-size: 1rem;
 }
 
 .A_IconButton {
@@ -316,7 +317,7 @@ button.A_Tab {
   position: relative;
   padding: 0 var(--space-12);
   border-left: 1.5px dashed var(--gray-base);
-  grid-column: span 3;
+  grid-column: -4 / -1;
   margin-top: auto;
 
   p {
@@ -336,6 +337,9 @@ button.A_Tab {
     .Q_HandleSquare {
       display: none;
     }
+  }
+  @media screen and (max-width: 1180px) {
+    grid-column: -5 / -1;
   }
 }
 
@@ -439,18 +443,49 @@ button.A_Tab {
   }
 }
 .A_ListItem {
-  font-size: 1rem;
+  font-size: 14px;
   text-decoration: none;
-  line-height: 20px;
-  min-height: 2rem;
+  line-height: 125%;
+  min-height: 1.5rem;
   height: fit-content;
+  padding-left: 2px;
+  /* white-space: nowrap; */
 
   &:hover {
     text-decoration: underline;
     color: var(--gray-soft);
   }
+
+  &.is-active {
+    background: rgba(122, 223, 241, 0.25);
+    position: relative;
+
+    &::before {
+      content: '';
+      height: 2rem;
+      width: 2px;
+      position: absolute;
+      background: #7adff1;
+      left: -3px;
+    }
+  }
 }
-.A_PosterArticle {
+
+.A_CollapseList {
+  display: flex;
+  gap: var(--space-2);
+  padding-left: var(--space-4);
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+
+  &:hover {
+    background: rgba(212, 212, 212, 0.25);
+    cursor: pointer;
+  }
+}
+
+.A_ImageArticle {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -458,10 +493,22 @@ button.A_Tab {
 
   figcaption {
     color: var(--gray-soft);
+    text-align: center;
+    line-height: 120%;
+  }
+
+  &.poster {
+    img {
+      width: 100%;
+      max-width: 360px;
+    }
   }
 
   img {
     border-radius: 2px;
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 9 / 6;
   }
 }
 .A_LineNumbers {
@@ -501,4 +548,27 @@ button.A_Tab {
   @media screen and (max-width: 768px) {
     width: 100%;
   }
+}
+.A_ExtraCallout {
+  position: relative;
+  width: 100%;
+  padding: var(--space-20);
+  /* text-align: center; */
+
+  @media screen and(max-width: 768px) {
+    padding: var(--space-12);
+  }
+}
+.A_KeyButton {
+  color: var(--gray-medium);
+  border: 1px solid var(--gray-medium);
+  font-family: 'Aeonik Mono';
+  font-size: 14px;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  border-radius: 4px;
+  min-width: 2rem;
 }
