--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -32,7 +32,10 @@
   grid-template-columns: repeat(var(--grid-columns), 1fr);
   column-gap: var(--grid-gap);
   row-gap: var(--space-24);
-  container: articles / inline-size;
+
+  &.handbook {
+    container: articles / inline-size;
+  }
 
   &.main {
     .O_CardArticle {
@@ -114,4 +117,17 @@
   display: flex;
   flex-direction: row;
   gap: var(--space-4);
+}
+.C_KeysButton {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  margin-top: 0.5rem;
+  span {
+    color: var(--gray-medium);
+  }
 }
