--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -72,6 +72,11 @@
 
   .A_FilterLabel {
     color: var(--gray-base);
+    font-size: 14px;
+    @media screen and (max-width: 1024px) {
+      font-size: 1rem;
+      font-weight: 500;
+    }
   }
   &:hover {
     cursor: pointer;
@@ -182,20 +187,6 @@
   flex-direction: column;
   align-items: center;
   align-items: flex-start;
-
-  .A_CollapseList {
-    display: flex;
-    gap: var(--space-2);
-    padding-left: var(--space-4);
-    align-items: center;
-    width: 100%;
-    height: 2rem;
-
-    &:hover {
-      background: rgba(212, 212, 212, 0.25);
-      cursor: pointer;
-    }
-  }
 
   a {
     text-decoration: none;
@@ -338,4 +329,16 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-4);
+}
+.M_ChapterButton {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  p.subtitle {
+    color: var(--gray-medium);
+  }
+
+  &.right {
+    align-items: flex-end;
+  }
 }
