--- a/src/stylesheets/vars.css
+++ b/src/stylesheets/vars.css
@@ -60,7 +60,8 @@
   /* GridColumns */
 
   --grid-columns: 12;
-  --grid-gap: var(--space-20);
+  /* --grid-gap: var(var(--space-20)); */
+  --grid-gap: clamp(0.75rem, 2.481rem + -1.923vw, 1.25rem);
   --grid-margin: 80px;
 
   /* WidthContainer */
