--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -54,7 +54,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: var(--space-40);
+  gap: clamp(1.5rem, -0.127rem + 3.39vw, 2rem);
   grid-column: 7/11;
 
   @media screen and (max-width: 1240px) {
