--- a/src/stylesheets/Components/quarcs.css
+++ b/src/stylesheets/Components/quarcs.css
@@ -60,8 +60,9 @@
   width: 100%;
   /* height: 410px; */
   aspect-ratio: 12 / 4;
-  background-color: var(--gray-lightest);
   border-radius: 4px;
+  height: 520px;
+  object-fit: cover;
 }
 .Q_ArticleImage {
   width: 100%;
