--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -87,7 +87,7 @@ header.S_Header {
   display: flex;
   flex-direction: column;
   gap: var(--space-24);
-  padding: var(--space-40) 0;
+  margin-top: var(--header-offset);
   /* background: navajowhite; */
 }
 .S_LeftNavBar {
