--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -89,17 +89,11 @@
   grid-template-columns: repeat(var(--grid-columns), 1fr);
   gap: var(--grid-gap);
 
-  .M_HeadingContainer {
-    grid-column: span 8;
-    /* background-color: red; */
-  }
-
   .O_AboutPartAction {
     margin-top: 3rem;
   }
 
   @media screen and (max-width: 1024px) {
-    row-gap: var(--space-20);
   }
 }
 
@@ -120,7 +114,7 @@
 .W_HandbookPageWrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--space-64);
+  gap: clamp(1.5rem, -0.167rem + 3.472vw, 4.5rem);
   margin-top: var(--header-offset);
 }
 .W_HanbookPageWrapper {
