recommendation system basic

--- a/src/partials/footerbar.html
+++ b/src/partials/footerbar.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<!-- <script>
+<script>
   const section = document.querySelector('.A_DVDLogo')
   const logo = document.querySelector('.bouncing-logo')
   const FPS = 60
@@ -87,4 +87,4 @@
     sectionWidth = section.clientWidth
     sectionHeight = section.clientHeight
   })
-</script> -->
+</script>
