--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -525,3 +525,10 @@
     margin-left: auto;
   }
 }
+.O_RelatedPosters {
+  display: flex;
+  flex-direction: column;
+  margin-top: clamp(4rem, 2rem + 6.667vw, 10rem);
+  gap: var(--space-20);
+  position: relative;
+}
