--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -108,6 +108,7 @@
   gap: var(--space-24);
   width: 100%;
   margin: calc(var(--header-offset) + var(--space-64)) auto;
+  min-height: 100vh;
 }
 
 /* PagesWrapper */
@@ -322,4 +323,14 @@
   display: flex;
   justify-content: space-between;
   margin-top: 6rem;
+}
+
+.W_RelatedPostersViewport {
+  position: relative;
+  cursor: grab;
+  overflow: hidden;
+
+  &:active {
+    cursor: grabbing;
+  }
 }
