--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -521,7 +521,7 @@ button.A_Tab {
   }
 }
 .A_ListItem {
-  font-size: 14px;
+  font-size: 15px;
   text-decoration: none;
   line-height: 125%;
   min-height: 1.5rem;
@@ -578,7 +578,8 @@ button.A_Tab {
   &.poster {
     img {
       width: 100%;
-      max-width: 360px;
+      height: 100%;
+      object-fit: contain;
     }
   }
 
