--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -105,6 +105,10 @@
 
   h1 {
     grid-column: span 5;
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1 / -1;
+    }
   }
 }
 .M_FiltersTitle {
@@ -170,11 +174,13 @@
     /* Number */
     &:nth-child(1) {
       grid-column: span 1;
-
+    }
+    &.number {
       @media screen and (max-width: 800px) {
         display: none;
       }
     }
+
     /* Chapter */
     &:nth-child(2) {
       grid-column: span 5;
@@ -194,6 +200,35 @@
     display: none;
   }
 }
+.M_Columns.modules {
+  p.body-other {
+    &:nth-child(1) {
+      grid-column: span 5;
+
+      @media screen and(max-width:800px) {
+        display: block;
+      }
+    }
+
+    &:nth-child(2) {
+      grid-column: 8 / 10;
+    }
+
+    &:nth-child(3) {
+      grid-column: span 2;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    p.body-other {
+      &:nth-child(2),
+      &:nth-child(3) {
+        grid-column: span 1;
+      }
+    }
+  }
+}
+
 .M_ListNavigation {
   display: flex;
   min-height: 32px;
@@ -224,6 +259,12 @@
       text-decoration: underline;
     }
   }
+}
+
+.M_TitleText {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
 }
 
 .M_CodeTabs {
