--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -1,14 +1,3 @@
-/* .O_HeaderItems {
-  width: 100%;
-  margin: 0 auto;
-  flex-direction: row;
-  background: var(--white-body);
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: center;
-} */
-
 .O_AboutCard {
   width: 100%;
   padding: 0 var(--space-16);
@@ -170,6 +159,7 @@
     }
   }
 }
+
 .O_ModuleCard,
 .O_CardArticle {
   width: 100%;
@@ -243,15 +233,6 @@
   gap: var(--space-2);
 }
 
-/* .O_FilterModal__footer .btn-reset,
-.O_FilterModal__footer .btn-apply {
-  flex: 1;
-  padding: 14px;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-} */
-
 .O_FilterSection {
   display: flex;
   flex-direction: column;
@@ -307,6 +288,99 @@
     text-align: center;
   }
 }
+
+.O_Module {
+  display: grid;
+  grid-template-columns: repeat(var(--grid-columns), 1fr);
+  gap: var(--grid-gap);
+  padding: var(--space-20) 0;
+  border-bottom: 1px solid var(--gray-lightest);
+  margin-top: -1px;
+  text-decoration: none;
+  position: relative;
+
+  .M_TitleText {
+    grid-column: span 5;
+    width: 70%;
+  }
+
+  .A_Tag {
+    grid-column: 8 / 10;
+  }
+
+  p.count {
+    grid-column: -4 / -3;
+  }
+
+  p.pseudolink {
+    grid-column: -1 / -3;
+    text-align: right;
+    text-decoration: underline;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .M_TitleText {
+      grid-column: span 4;
+      width: 80%;
+    }
+
+    .A_Tag,
+    p.count {
+      grid-column: span 1;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .A_Tag,
+    p.pseudolink {
+      display: none;
+    }
+
+    p.count {
+      grid-column: 2 / 5;
+      color: var(--gray-light);
+
+      &::before {
+        content: attr(data-language) ' · ';
+        display: inline;
+      }
+
+      &::after {
+        content: ' Решений';
+        display: inline;
+      }
+    }
+
+    &:first-child {
+      border-top: 1px solid var(--gray-lightest);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 1.5rem;
+      height: 1.5rem;
+      right: 0;
+      bottom: 1rem;
+      background: url('../../images/icons/Q_ArrowForward-24.svg') center
+        no-repeat;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    row-gap: var(--space-16);
+    padding: var(--space-16) 0;
+    .M_TitleText {
+      width: 100%;
+      grid-column: span 3s;
+    }
+
+    p.count {
+      grid-column: 1/3;
+    }
+  }
+}
+
 .O_ModulesBlock {
   display: flex;
   flex-direction: column;
