--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -87,7 +87,8 @@ header.S_Header {
   display: flex;
   flex-direction: column;
   gap: var(--space-24);
-  margin-top: var(--header-offset);
+  padding: clamp(0.75rem, 3vw, 4rem) 0;
+  /* margin-top: var(--header-offset); */
   /* background: navajowhite; */
 }
 .S_LeftNavBar {
