--- a/src/stylesheets/Components/quarcs.css
+++ b/src/stylesheets/Components/quarcs.css
@@ -135,3 +135,16 @@ input[type='checkbox'] {
     grid-column: 1/-1;
   }
 }
+.Q_ModulesCover {
+  width: 100%;
+  height: 270px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
